# try_kafka_fastapi

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
